# octopod

./: .gitignore  Cargo.toml  Justfile  README.md  api.hurl  flake.nix  local.hurl
.github/workflows/: ci-nix.yml  release.yml
src/: main.rs
statics/: reset.css
ui/: .gitignore  default.nix  elm-srcs.nix  elm.json  index.html
ui/src/: Main.elm
