[package]
name = "octopod"
version = "0.1.0"
edition = "2021"
description = "Simple UI for Docker Registries"

[dependencies]
clap = { version = "4.5.19", features = ["derive", "env"] }
color-eyre = "0.6.3"
include_dir = "0.7.4"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
warp = "0.3.7"
